--- a/src/main/resources/templates/serviceSelection.html
+++ b/src/main/resources/templates/serviceSelection.html
@@ -6,25 +6,43 @@
     <link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
 </head>
 <body>
+<div class="content">
     <form method = 'post'>
+<table>
+    <tr>
+        <td>
+            <label>
+                Skin type:
+                <select name = 'skintype'>
+                    <option value = 'oily'>Oily</option>
+                    <option value = 'combination'>Combination</option>
+                    <option value = 'normal'>Normal</option>
+                    <option value = 'dry'>Dry</option>
+                </select>
+            </label>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <label>
+                Manicure or Pedicure?
+                <select name = 'manipedi'>
+                    <option value = 'manicure'>Manicure</option>
+                    <option value = 'pedicure'>Pedicure</option>
+                </select>
+            </label>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <input type = 'submit' value = 'Submit'>
+        </td>
+    </tr>
+</table>
 
-        <label>
-            Skin type:
-            <select name = 'skintype'>
-                <option value = 'oily'>Oily</option>
-                <option value = 'combination'>Combination</option>
-                <option value = 'normal'>Normal</option>
-                <option value = 'dry'>Dry</option>
-            </select>
-        </label>
-        <label>
-            Manicure or Pedicure?
-            <select name = 'manipedi'>
-                <option value = 'manicure'>Manicure</option>
-                <option value = 'pedicure'>Pedicure</option>
-            </select>
-        </label>
-        <input type = 'submit' value = 'Submit'>
+
+
     </form>
+</div>
 </body>
 </html>
