--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <link th:href="@{/css/styles.css}" rel="stylesheet">
 </head>
 <body>
+<div class="content">
 <h1>Thank you for registering!</h1>
 <p>Treat yourself with some of our services:</p>
 <p><a href="../">Services Menu</a></p>
+</div>
 </body>
 </html>
